k8s/6-networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: customer-network
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: customer
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
        - port: 80
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: form-network
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: form
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
        - port: 80
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
